--- a/src/app/modules/evaluation/studentevaluation/studentevaluation.component.html
+++ b/src/app/modules/evaluation/studentevaluation/studentevaluation.component.html
@@ -84,7 +84,11 @@
                     <mat-icon>start</mat-icon>
                 </button>
                 <button
-                    [disabled]="loading || !element.Action1 || Permission=='read' || EvaluationSubmitted || !EvaluationStarted"
+                    [disabled]="loading || !element.Action1 
+                    || Permission=='read' 
+                    || EvaluationSubmitted 
+                    || !EvaluationStarted
+                    || AlreadyAnswered"
                     matTooltip="submit" mat-mini-fab color="accent" (click)="SubmitEvaluation()">
                     <mat-icon>done_all</mat-icon>
                 </button>
