--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -104,12 +104,12 @@
                         {{element.MotherName}}
                     </mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="ReasonForLeaving">
+                <!-- <ng-container matColumnDef="ReasonForLeaving">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Reason For Leaving </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element.ReasonForLeaving}}
                     </mat-cell>
-                </ng-container>
+                </ng-container> -->
                 <ng-container matColumnDef="Active">
                     <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
                     <mat-cell style="justify-content: center;" *matCellDef="let element">
