--- a/src/app/modules/studentactivity/uploadstudentdocument/uploadstudentdoc.component.scss
+++ b/src/app/modules/studentactivity/uploadstudentdocument/uploadstudentdoc.component.scss
@@ -4,8 +4,8 @@
 }
 mat-form-field
 {
-    width: 100%;
-    padding-right: 100px;
+    width: 98%;
+    margin-right: 15px;    
     
 }
 .mat-column-FileId{
