--- a/src/app/modules/studentactivity/generatecertificate/generatecertificate.component.html
+++ b/src/app/modules/studentactivity/generatecertificate/generatecertificate.component.html
@@ -1,21 +1,21 @@
 <div>
     <div style="padding:15px 15px 10px 15px;">
-        <div><strong>Issue Certificates</strong></div>
+        <div><strong>Generate Certificates</strong></div>
     </div>
     <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <!-- <alert></alert> -->
     <div style="padding: 15px;" fxLayout="row wrap">
         <div style="width: 100%;">
             <form [formGroup]="searchForm">
-                <!-- <mat-form-field [style.width.px]="250" appearance="outline">
-                    <mat-label>student</mat-label>
+                <mat-form-field appearance="outline" [style.width.px]="350">
+                    <mat-label>Student</mat-label>
                     <input type="text" matInput formControlName="searchStudentName" [matAutocomplete]="auto">
                     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-                        <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                        <mat-option *ngFor="let option of filteredStudents | async" [value]="option">
                             {{option.Name}}
                         </mat-option>
                     </mat-autocomplete>
-                </mat-form-field> -->
+                </mat-form-field>
                 <mat-form-field appearance="outline">
                     <mat-label>Certificates</mat-label>
                     <mat-select formControlName="searchCertificateTypeId" #cerId>
